--- a/assessment.html
+++ b/assessment.html
@@ -2,7 +2,11 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https//iga7779.github.io/assessment/assessment.html" />
+    <meta property="og:title" content="あんたのええと子診断" />
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。" />
     <title>あんたのええと子診断</title>
     <link rel="stylesheet" href="assessment.css"  />
 
